# guixu

./: .dockerignore  .gitignore  .gitleaks.toml  AGENTS.md  CLA.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  NOTICE  README.md  ROADMAP.md  TRADEMARKS.md  _typos.toml  bootstrap.sh  demo.sh  deny.toml  docker-compose.yml  install.sh  marketplace.json  run-demo.sh  rust-toolchain.toml  rustfmt.toml  traces.duckdb
crates/agent/: Cargo.toml
crates/agent/src/: contracts.rs  lib.rs  memory.rs  planner.rs  signal_supervisor.rs  workflow.rs
crates/agent/tests/: workflow_tests.rs
crates/attestation/: Cargo.toml
crates/attestation/src/: buyer_review.rs  client.rs  lib.rs  provider_reputation.rs  seller_reputation.rs  tests.rs
crates/auth/: Cargo.toml
crates/auth/src/: credential.rs  lib.rs  privacy.rs  verifier.rs  watermark.rs
crates/auth/tests/: verifier_contract.rs
crates/confidential_valuation/: Cargo.toml
crates/confidential_valuation/src/: verify.rs
crates/confidential_valuation/tests/: valuation_tests.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  env.rs  error.rs  feedback.rs  identity.rs  lib.rs  metadata.rs  signal_fetcher.rs  types.rs
crates/core/src/agent/: contracts.rs  memory.rs  mod.rs
crates/core/src/config/: migration.rs
crates/external-agents/: CLAUDE.md  Cargo.toml
crates/external-agents/agents.d/: hermes.json  openclaw.json  opencode.json
crates/external-agents/src/: config.rs  error.rs  lib.rs  mcp_client.rs  registry.rs  traits.rs  types.rs
crates/external-agents/src/adapters/: cli.rs  http.rs  mod.rs
crates/external-agents/tests/: integration_tests.rs  workflow_test.rs
crates/mcp-server/: Cargo.toml  build.rs
crates/mcp-server/src/: demo_ui.rs  http.rs  lib.rs  protocol.rs  rpc.rs  server.rs  state.rs  stdio.rs  tools.rs  web_ui.rs
crates/mcp-server/src/handlers/: bt_download.rs  evaluate.rs  feedback.rs  mod.rs  purchase.rs  reviews.rs  search.rs
crates/mcp-server/tests/: bittorrent_smoke.rs
crates/node/: Cargo.toml
crates/node/src/: agents_builtin.toml  chat.rs  main.rs  mcp_install.rs  service_files.rs  watchdog.rs
crates/node/tests/: cli_baseline.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: access_control.rs  dht.rs  gossip.rs  lib.rs  network.rs  p2p_handle.rs  publish.rs  sample_server.rs  storage.rs  torrent.rs  watchdir.rs
crates/p2p/src/network/: codec.rs  mod.rs
crates/p2p/tests/: dht_contract.rs
crates/plugins/mcp/: Cargo.toml  build.rs
crates/plugins/mcp/src/: catalog.rs  demo_ui.rs  host_sampling.rs  http.rs  lib.rs  prism_ui.rs  protocol.rs  registry.rs  rpc.rs  sampling.rs  sampling_impls.rs  server.rs  session.rs  state.rs  stdio.rs  tool_adapters.rs  tools.rs  trace_context.rs  web_ui.rs
crates/plugins/mcp/src/discovery/: intent_profiler.rs  llm.rs  (+6 more)
crates/plugins/mcp/tests/: academic_search_e2e.rs  bittorrent_smoke.rs  handler_feedback_contract.rs  mcp_stdio_integration.rs
crates/publish/: Cargo.toml
crates/publish/src/: encrypt_zip.rs  lib.rs  upload.rs
crates/search/: Cargo.toml
crates/search/benches/: search_engine.rs
crates/search/skills/builtin/: arxiv.json  bittorrent.json  datacite_commons.json  dblp.json  defillama.json  duckdb.json  erc20_transfer_skill.json  ethereum_mempool_skill.json  example_http_registry.json  google_dataset_search.json  guixu_hub.json  guixu_market.json  guixu_p2p.json  huggingface.json  ipfs.json  kaggle.json  local_file.json  pan_search.json  postgresql.json  rwa_xyz.json  semantic_scholar.json  sql_endpoint.json  uniswap_subgraph_skill.json
crates/search/src/: adapters.rs  engine.rs  http_client.rs  intent.rs  lib.rs  local_sample_downloader.rs  p2p_sample_downloader.rs  sample_eval.rs  search_cache.rs  skill_sample_downloader.rs  streaming.rs  tests.rs  vector_index.rs
crates/search/src/adapters/: arxiv.rs  bittorrent.rs  datacite_commons.rs  dblp.rs  defillama.rs  duckdb.rs  google_dataset_search.rs  guixu_hub.rs  guixu_p2p.rs  huggingface.rs  ipfs.rs  kaggle.rs  local_file.rs  mod.rs  open_data_skill.rs  pan_search.rs  postgresql.rs  rwa_xyz.rs  semantic_scholar.rs  sql_catalog.rs  sql_endpoint.rs  stream_adapter.rs  util.rs
crates/search/tests/: open_data_skill_contract.rs  pan_search_live.rs  phase0_protocol_tests.rs  phase1_http_client_tests.rs  phase2_search_cache_tests.rs  phase3_timeout_tests.rs  skill_file_tests.rs
crates/storage/: Cargo.toml
crates/storage/src/: feedback_store.rs  job_store.rs  lib.rs  memory_store.rs  metadata_store.rs  otel_export.rs  otel_genai.rs  tests.rs  trace_export.rs  trace_import.rs  trace_manager.rs  trace_pool.rs  trace_sanitizer.rs  trace_store.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: builders.rs  fixtures.rs  lib.rs  stores.rs  stubs.rs
crates/trading/: Cargo.toml
crates/trading/src/: escrow.rs  lib.rs  mpp.rs  payment_verify.rs  protocol.rs  router.rs  tests.rs  wallet.rs  x402.rs
crates/trading/tests/: x402_market_tests.rs
crates/udf/: Cargo.toml
crates/udf/src/: lib.rs  registry.rs
crates/udf/src/chained/: mod.rs  sampling.rs  valuation.rs
crates/udf/src/common/: error.rs  metadata.rs  mod.rs
crates/udf/src/remote/: mod.rs  remote.rs  remote_client.rs
crates/udf/src/sampling/: builtins.rs  input.rs  mod.rs  output.rs  trait_def.rs
crates/udf/src/sandbox/: mod.rs  policy.rs
crates/udf/src/valuation/: builtins.rs  input.rs  output.rs  trait_def.rs
crates/udf/tests/integration/: udf_integration_tests.rs
crates/valuation/: Cargo.toml
crates/valuation/src/: free_evaluator.rs  lib.rs  memory_evaluator.rs  paid_evaluator.rs  pricing.rs  scorer.rs  tcv.rs  video_evaluator.rs
crates/valuation/src/confidential_valuation/: client.rs  merge.rs  mod.rs  verify.rs
crates/valuation/tests/: confidential_valuation_tests.rs  valuation_tests.rs
python/: README.md  pyproject.toml
python/guixu/: __init__.py  client.py  models.py
ui/prism/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ui/prism/src-tauri/capabilities/: main.json
ui/prism/src-tauri/icons/: README.md  icon.icns
ui/prism/src-tauri/src/: main.rs
(+117 files in other folders)
