[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/storage",
    "crates/p2p",
    "crates/search",
    "crates/auth",
    "crates/trading",
    "crates/valuation",
    "crates/mcp-server",
    "crates/node",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/guixu-project/guixu"

[workspace.dependencies]
# Internal crates
data-core = { path = "crates/core" }
data-storage = { path = "crates/storage" }
data-p2p = { path = "crates/p2p" }
data-search = { path = "crates/search" }
data-auth = { path = "crates/auth" }
data-trading = { path = "crates/trading" }
data-valuation = { path = "crates/valuation" }
data-mcp-server = { path = "crates/mcp-server" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# P2P networking
libp2p = { version = "0.54", features = [
    "tokio",
    "noise",
    "tcp",
    "yamux",
    "kad",
    "gossipsub",
    "mdns",
    "identify",
    "macros",
] }

# Storage
rocksdb = "0.22"

# Crypto / Identity
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

# Data processing
polars = { version = "0.46", features = ["parquet", "csv", "json", "lazy"] }

# CLI
clap = { version = "4", features = ["derive"] }
dirs = "6"

# Misc
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
sha2 = "0.10"
hex = "0.4"
bs58 = "0.5"
notify = { version = "7", features = ["macos_fsevent"] }

# HTTP
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }

# BitTorrent
librqbit = "8"
