# Copyright (c) 2026 The State Key Laboratory of Blockchain and Data Security, Zhejiang University
# SPDX-License-Identifier: Apache-2.0

[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/storage",
    "crates/p2p",
    "crates/search",
    "crates/auth",
    "crates/trading",
    "crates/valuation",
    "crates/publish",
    "crates/attestation",
    "crates/plugins/mcp",
    "crates/node",
    "crates/agent",
]

[workspace.lints.clippy]
# Default clippy lints are enforced via CI (cargo clippy -- -D warnings).
# Enable pedantic incrementally as the codebase matures:
#   pedantic = { level = "warn", priority = -1 }

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
license = "Apache-2.0"
repository = "https://github.com/guixu-project/guixu"

[workspace.dependencies]
# Internal crates
data-core = { path = "crates/core" }
data-storage = { path = "crates/storage" }
data-p2p = { path = "crates/p2p" }
data-search = { path = "crates/search" }
data-auth = { path = "crates/auth" }
data-trading = { path = "crates/trading" }
data-valuation = { path = "crates/valuation" }
data-publish = { path = "crates/publish" }
data-attestation = { path = "crates/attestation" }
data-mcp-server = { path = "crates/plugins/mcp" }
data-agent = { path = "crates/agent" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# P2P networking
libp2p = { version = "0.54", features = [
    "tokio",
    "noise",
    "tcp",
    "yamux",
    "kad",
    "gossipsub",
    "mdns",
    "identify",
    "macros",
] }

# Storage
rocksdb = "0.22"

# Crypto / Identity
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

# Data processing
polars = { version = "0.46", features = ["parquet", "csv", "json", "lazy"] }

# CLI
clap = { version = "4", features = ["derive"] }
dirs = "6"

# Misc
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
bytes = "1"
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
bs58 = "0.5"
notify = { version = "7", features = ["macos_fsevent"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }

# DuckDB for agent trace storage
duckdb = { version = "1.1", features = ["bundled"] }

# Pinned to avoid edition2024 requirement in base64ct 1.8.x
base64ct = "1.6"

# HTTP
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# BitTorrent
librqbit = { version = "8", default-features = false, features = ["rust-tls"] }
