# Copyright (c) 2026 The State Key Laboratory of Blockchain and Data Security, Zhejiang University
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guixu"
version = "0.1.0"
description = "Python SDK for Guixu P2P Data Platform"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Guixu Project" }
]
keywords = ["p2p", "data", "dataset", "decentralized", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/guixu-project/guixu"
Documentation = "https://github.com/guixu-project/guixu#readme"

[tool.hatch.build.targets.wheel]
packages = ["guixu"]

[tool.ruff]
line-length = 100
target-version = "py310"