[package]
name = "data-attestation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
data-core = { path = "../core" }

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
hex.workspace = true
