# Copyright (c) 2026 The State Key Laboratory of Blockchain and Data Security, Zhejiang University
# SPDX-License-Identifier: Apache-2.0

[package]
name = "data-attestation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
data-core = { path = "../core" }

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
hex.workspace = true

[dev-dependencies]
hex.workspace = true

[lints]
workspace = true
