[package]
name = "data-auth"
version.workspace = true
edition.workspace = true

[dependencies]
data-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
