# Copyright (c) 2026 The State Key Laboratory of Blockchain and Data Security, Zhejiang University
# SPDX-License-Identifier: Apache-2.0

[package]
name = "data-confidential-valuation"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
data-core = { path = "../core" }
anyhow = "1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tracing = "0.1"
