[package]
name = "data-mcp-server"
version.workspace = true
edition.workspace = true

[dependencies]
data-core = { workspace = true }
data-storage = { workspace = true }
data-p2p = { workspace = true }
data-auth = { workspace = true }
data-valuation = { workspace = true }
data-search = { workspace = true }
data-trading = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }

[lints]
workspace = true
