[package]
name = "data-node"
version.workspace = true
edition.workspace = true

[[bin]]
name = "data-node"
path = "src/main.rs"

[dependencies]
data-core = { workspace = true }
data-p2p = { workspace = true }
data-auth = { workspace = true }
data-mcp-server = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
