[package]
name = "data-node"
version.workspace = true
edition.workspace = true

[[bin]]
name = "data-node"
path = "src/main.rs"

[features]
default = ["full"]
full = ["p2p", "torrent", "trading"]
p2p = ["dep:data-p2p"]
torrent = []
trading = ["dep:data-trading"]

[dependencies]
data-core = { workspace = true }
data-storage = { workspace = true }
data-p2p = { workspace = true, optional = true }
data-auth = { workspace = true }
data-mcp-server = { workspace = true }
data-trading = { workspace = true, optional = true }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
dirs = { workspace = true }

[lints]
workspace = true
