# Copyright (c) 2026 The State Key Laboratory of Blockchain and Data Security, Zhejiang University
# SPDX-License-Identifier: Apache-2.0

[package]
name = "data-p2p"
version.workspace = true
edition.workspace = true

[dependencies]
data-core = { workspace = true }
data-auth = { workspace = true }
data-storage = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
libp2p = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }
notify = { workspace = true }
chrono = { workspace = true }
librqbit = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
polars = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }

[lints]
workspace = true
