[package]
name = "data-publish"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
data-core = { path = "../core" }

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["multipart"] }
hex.workspace = true
uuid.workspace = true
tokio.workspace = true

# Zip encryption
zip = { version = "2", features = ["aes-crypto", "deflate"] }

# Keccak-256 (Ethereum-compatible password hashing)
sha3.workspace = true
