[package]
name = "data-search"
version.workspace = true
edition.workspace = true

[dependencies]
data-core = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
polars = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
glob = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
data-valuation = { workspace = true }

[lints]
workspace = true
