# Copyright (c) 2026 The State Key Laboratory of Blockchain and Data Security, Zhejiang University
# SPDX-License-Identifier: Apache-2.0

[package]
name = "data-search"
version.workspace = true
edition.workspace = true

[dependencies]
data-core = { workspace = true }
data-attestation = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
polars = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
glob = "0.3"
futures = "0.3"
base64 = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }
tokio-postgres = { workspace = true }

[dev-dependencies]
tempfile = "3"
data-valuation = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
async-trait = { workspace = true }

[[bench]]
name = "search_engine"
harness = false

[lints]
workspace = true
