[package]
name = "data-storage"
version.workspace = true
edition.workspace = true

[dependencies]
data-core = { workspace = true }
rocksdb = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
chrono = { workspace = true }
