# Copyright (c) 2026 The State Key Laboratory of Blockchain and Data Security, Zhejiang University
# SPDX-License-Identifier: Apache-2.0

[package]
name = "data-storage"
version.workspace = true
edition.workspace = true

[dependencies]
data-core = { workspace = true }
rocksdb = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
