# Copyright (c) 2026 The State Key Laboratory of Blockchain and Data Security, Zhejiang University
# SPDX-License-Identifier: Apache-2.0

[package]
name = "data-storage"
version.workspace = true
edition.workspace = true

[dependencies]
data-core = { workspace = true }
data-attestation = { workspace = true }
rocksdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
duckdb = { workspace = true }
rayon = { workspace = true }
regex = "1"
rand = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
tempfile = "3"

[lints]
workspace = true
