# Copyright (c) 2026 The State Key Laboratory of Blockchain and Data Security, Zhejiang University
# SPDX-License-Identifier: Apache-2.0

[package]
name = "data-test-utils"
version.workspace = true
edition.workspace = true

[dependencies]
data-core = { workspace = true }
data-storage = { workspace = true }
data-search = { workspace = true }

chrono = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tempfile = "3"
uuid = { workspace = true }

[lints]
workspace = true
