# Copyright (c) 2026 The State Key Laboratory of Blockchain and Data Security, Zhejiang University
# SPDX-License-Identifier: Apache-2.0

[package]
name = "data-udf"
version.workspace = true
edition.workspace = true

[dependencies]
data-core = { workspace = true }
data-storage = { workspace = true }
data-search = { workspace = true }
data-valuation = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
data-test-utils = { path = "../test-utils" }

[lints]
workspace = true