# Copyright (c) 2026 The State Key Laboratory of Blockchain and Data Security, Zhejiang University
# SPDX-License-Identifier: Apache-2.0

[package]
name = "data-valuation"
version.workspace = true
edition.workspace = true

[dependencies]
data-core = { workspace = true }
data-storage = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
polars = { workspace = true, features = ["parquet", "csv"] }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
tokio = { workspace = true }
data-test-utils = { path = "../test-utils" }

[lints]
workspace = true
