# Copyright (c) 2026 The State Key Laboratory of Blockchain and Data Security, Zhejiang University
# SPDX-License-Identifier: Apache-2.0

[package]
name = "data-mcp-server"
version.workspace = true
edition.workspace = true

[dependencies]
data-core = { workspace = true }
data-storage = { workspace = true }
data-p2p = { workspace = true }
data-auth = { workspace = true }
data-valuation = { workspace = true }
data-search = { workspace = true }
data-trading = { workspace = true }
libp2p = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22"

[lints]
workspace = true
